--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,45 +8,44 @@
     android:textAlignment="center"
     tools:context=".MainActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="29dp">
+    <TextView
+        android:id="@+id/number_count"
+        android:layout_width="200dp"
+        android:layout_height="505dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="1dp"
+        android:autoSizeTextType="uniform"
+        android:background="#00BCD4"
+        android:fontFamily="sans-serif"
+        android:gravity="center_vertical"
+        android:text="0"
+        android:textAlignment="center"
+        android:textColor="#080C22"
+        android:textSize="200sp"
+        android:textStyle="bold"
+        tools:ignore="RtlCompat" />
 
-        <Button
-            android:id="@+id/button_toast"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:fontFamily="sans-serif"
-            android:text="TOAST"
-            android:textSize="34sp" />
+    <Button
+        android:id="@+id/button_count"
+        android:layout_width="204dp"
+        android:layout_height="88dp"
+        android:layout_marginEnd="0dp"
+        android:layout_toStartOf="@+id/number_count"
+        android:text="COUNT"
+        android:textSize="34sp" />
 
-        <Button
-            android:id="@+id/button_count"
-            android:layout_width="match_parent"
-            android:layout_height="126dp"
-            android:fontFamily="sans-serif-light"
-            android:text="COUNT"
-            android:textSize="34sp" />
+    <Button
+        android:id="@+id/button_toast"
+        android:layout_width="204dp"
+        android:layout_height="88dp"
 
-        <TextView
-            android:id="@+id/number_count"
-            android:layout_width="match_parent"
-            android:layout_height="505dp"
-            android:autoSizeTextType="uniform"
-            android:background="#00BCD4"
-            android:fontFamily="sans-serif"
-            android:gravity="center_vertical"
-            android:text="0"
-            android:textAlignment="center"
-            android:textColor="#080C22"
-            android:textSize="96sp"
-            android:textStyle="bold"
-            tools:ignore="RtlCompat" />
+        android:layout_below="@+id/button_count"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_toStartOf="@+id/number_count"
+        android:fontFamily="sans-serif"
+        android:text="TOAST"
+        android:textSize="34sp" />
 
-    </RelativeLayout>
-
-</androidx.appcompat.widget.LinearLayoutCompat>
+</RelativeLayout>
