--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,14 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#221F1F"
-    android:paddingLeft="20dp"
     android:textAlignment="center"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/number_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="505dp"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="0dp"
         android:layout_marginEnd="1dp"
@@ -20,8 +19,6 @@
         android:background="#00BCD4"
         android:fontFamily="sans-serif"
         android:gravity="center_vertical"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp"
         android:text="0"
         android:textAlignment="center"
         android:textColor="#080C22"
@@ -31,25 +28,23 @@
 
     <Button
         android:id="@+id/button_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="204dp"
+        android:layout_height="88dp"
         android:layout_marginEnd="0dp"
         android:layout_toStartOf="@+id/number_count"
-        android:padding="20dp"
         android:text="COUNT"
         android:textSize="34sp" />
 
     <Button
         android:id="@+id/button_toast"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="204dp"
+        android:layout_height="88dp"
 
         android:layout_below="@+id/button_count"
         android:layout_marginTop="0dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="0dp"
         android:layout_toStartOf="@+id/number_count"
         android:fontFamily="sans-serif"
-        android:padding="20dp"
         android:text="TOAST"
         android:textSize="34sp" />
 
